--- a/src/app/authentication/reset-password/reset-password.component.html
+++ b/src/app/authentication/reset-password/reset-password.component.html
@@ -63,7 +63,7 @@
                                 id="password" style="font-size: 12.75px;">
                         </div>
                     </div>
-                    <div class="form-group row" *ngIf="isCodeSent">
+                    <div class="form-group row">
                         <label for="confirmPassword" class="label col-sm-4 form-control-label"
                             style="font-size: 12.75px;">Confirm Password</label>
                         <div class="col-sm-8">
@@ -75,8 +75,8 @@
                     <div class="form-group row">
                         <br>
                         <div class="offset-sm-4 col-sm-8">
-                            <button type="submit" nbButton status="primary" (click)="resetPassword()">Send
-                                Code</button>
+                            <button type="submit" nbButton status="primary" (click)="resetPassword()">Change
+                                Password</button>
                         </div>
                     </div>
                 </form>
