--- a/src/app/pages/course/create-medium/create-medium.component.html
+++ b/src/app/pages/course/create-medium/create-medium.component.html
@@ -15,7 +15,7 @@
         </div>
 
         <nb-card>
-            <nb-card-header>Create New Course</nb-card-header>
+            <nb-card-header>Create New Medium</nb-card-header>
             <nb-card-body>
                 <form class="form-horizontal" (ngSubmit)="addMedium()" [formGroup]="createForm">
                     <div class="form-group row">
